--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -4,3 +4,8 @@ window {
   width = 1200
   height = 800
 }
+error {
+  server = "Fetcher failed to connect to server."
+  register = "Register failed."
+  login = "Login failed."
+}
