--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -9,3 +9,15 @@ error {
   register = "Register failed."
   login = "Login failed."
 }
+button {
+  add = "Add"
+  edit = "Edit"
+  save = "Save"
+  chart = "Chart"
+  faults = "Faults"
+  register = "Register"
+  login = "Login"
+  account = "Account"
+  activate = "Activate"
+  deactivate = "Deactivate"
+}
