--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -21,3 +21,8 @@ button {
   activate = "Activate"
   deactivate = "Deactivate"
 }
+dialog {
+  registerLogin = "Register Login"
+  account = "Account"
+  faults = "Faults"
+}
