--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -26,3 +26,10 @@ dialog {
   account = "Account"
   faults = "Faults"
 }
+label {
+  license = "License:"
+  emailAddress = "Email Address:"
+  pin = "Pin:"
+  activated = "Activated:"
+  deactivated = "Deactivated:"
+}
