--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -26,6 +26,10 @@ dialog {
   account = "Account"
   faults = "Faults"
 }
+header {
+  occurred = "Occurred"
+  fault = "Fault"
+}
 label {
   license = "License:"
   emailAddress = "Email Address:"
