edited client.conf, context and profile dialog

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -12,6 +12,7 @@ error {
 button {
   add = "Add"
   edit = "Edit"
+  update = "Update"
   save = "Save"
   chart = "Chart"
   faults = "Faults"
@@ -25,6 +26,7 @@ dialog {
   registerLogin = "Register Login"
   account = "Account"
   faults = "Faults"
+  profile = "Profile"
 }
 header {
   occurred = "Occurred"
