edited client.conf, context and profile dialog

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -38,6 +38,7 @@ label {
   pin = "Pin:"
   activated = "Activated:"
   deactivated = "Deactivated:"
+  name = "Name:"
 }
 tab {
   profiles = "Profiles"
