--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -39,6 +39,10 @@ label {
   activated = "Activated:"
   deactivated = "Deactivated:"
   name = "Name:"
+  kind = "Kind:"
+  detail = "Detail:"
+  organic = "Organic:"
+  calories = "Calories:"
 }
 tab {
   profiles = "Profiles"
