--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -27,6 +27,10 @@ dialog {
   account = "Account"
   faults = "Faults"
   profile = "Profile"
+  edible = "Edible"
+  drinkable = "Drinkable"
+  expendable = "Expendable"
+  measurable = "Measurable"
 }
 header {
   occurred = "Occurred"
