enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -49,6 +49,10 @@ label {
   calories = "Calories:"
   ate = "Ate:"
   drank = "Drank:"
+  sunshine = "Sunshine:"
+  freshair = "Freshair:"
+  start = "Start:"
+  finish = "Finish:"
 }
 tab {
   profiles = "Profiles"
