enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -56,4 +56,8 @@ label {
 }
 tab {
   profiles = "Profiles"
+  edibles = "Edibles"
+  drinkables = "Drinkables"
+  expendables = "Expendables"
+  measurables = "Measurables"
 }
