enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -53,6 +53,9 @@ label {
   freshair = "Freshair:"
   start = "Start:"
   finish = "Finish:"
+  measurement = "Measurement:"
+  unit = "Unit:"
+  measured = "Measured:"
 }
 tab {
   profiles = "Profiles"
