enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -22,6 +22,10 @@ button {
   activate = "Activate"
   deactivate = "Deactivate"
 }
+column {
+  yes = "yes"
+  no = "no"
+}
 dialog {
   registerLogin = "Register Login"
   account = "Account"
