enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -50,6 +50,7 @@ label {
   kind = "Kind:"
   detail = "Detail:"
   organic = "Organic:"
+  count = "Count:"
   calories = "Calories:"
   ate = "Ate:"
   drank = "Drank:"
