enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -39,6 +39,8 @@ dialog {
 header {
   occurred = "Occurred"
   fault = "Fault"
+  name = "Name"
+  created = "Created"
 }
 label {
   license = "License:"
