enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -41,6 +41,10 @@ header {
   fault = "Fault"
   name = "Name"
   created = "Created"
+  kind = "Kind"
+  detail = "Detail"
+  calories = "Calories"
+  ate = "ate"
 }
 label {
   license = "License:"
