enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -45,6 +45,9 @@ header {
   detail = "Detail"
   calories = "Calories"
   ate = "ate"
+  organic = "Organic"
+  count = "Count"
+  drank = "Drank"
 }
 label {
   license = "License:"
