enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -48,6 +48,10 @@ header {
   organic = "Organic"
   count = "Count"
   drank = "Drank"
+  sunshine = "Sunshine"
+  freshair = "Freshair"
+  start = "Start"
+  finish = "Finish"
 }
 label {
   license = "License:"
