enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -52,6 +52,9 @@ header {
   freshair = "Freshair"
   start = "Start"
   finish = "Finish"
+  measurement = "Measurement"
+  unit = "Unit"
+  measured = "Measured"
 }
 label {
   license = "License:"
