enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -76,6 +76,8 @@ label {
   measurement = "Measurement:"
   unit = "Unit:"
   measured = "Measured:"
+  today = "Today:"
+  week = "Week:"
 }
 tab {
   profiles = "Profiles"
