enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -85,4 +85,5 @@ tab {
   drinkables = "Drinkables"
   expendables = "Expendables"
   measurables = "Measurables"
+  caloriesinout = "Calories In/Out"
 }
