enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -78,6 +78,8 @@ label {
   measured = "Measured:"
   today = "Today:"
   week = "Week:"
+  in = "In:"
+  out = "Out:"
 }
 tab {
   profiles = "Profiles"
