enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -80,6 +80,9 @@ label {
   week = "Week:"
   in = "In:"
   out = "Out:"
+  weight = "Weight:"
+  pulse = "Pulse:"
+  glucose = "Glucose:"
 }
 tab {
   profiles = "Profiles"
