enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -89,4 +89,6 @@ tab {
   expendables = "Expendables"
   measurables = "Measurables"
   caloriesinout = "Calories In/Out"
+  today = "Today"
+  week = "week"
 }
