enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -22,6 +22,11 @@ button {
   activate = "Activate"
   deactivate = "Deactivate"
 }
+chart {
+  min = "Min:"
+  max = "Max:"
+  avg = "Avg:"
+}
 column {
   yes = "yes"
   no = "no"
