enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -97,4 +97,7 @@ tab {
   caloriesinout = "Calories In/Out"
   today = "Today"
   week = "week"
+  weight = "Weight"
+  pulse = "Pulse"
+  glucose = "Glucose"
 }
