enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -73,7 +73,8 @@ label {
   organic = "Organic:"
   count = "Count:"
   calories = "Calories:"
-  ate = "Ate:"
+  dateAte = "Date Ate:"
+  timeAte = "Time Ate:"
   drank = "Drank:"
   sunshine = "Sunshine:"
   freshair = "Freshair:"
