enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -75,7 +75,8 @@ label {
   calories = "Calories:"
   dateAte = "Date Ate:"
   timeAte = "Time Ate:"
-  drank = "Drank:"
+  dateDrank = "Date Drank:"
+  timeDrank = "Time Drank:"
   sunshine = "Sunshine:"
   freshair = "Freshair:"
   start = "Start:"
