enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -79,8 +79,10 @@ label {
   timeDrank = "Time Drank:"
   sunshine = "Sunshine:"
   freshair = "Freshair:"
-  start = "Start:"
-  finish = "Finish:"
+  dateStart = "Start Date:"
+  timeStart = "Start Time:"
+  dateFinish = "Finish Date:"
+  timeFinish = "Finish Time:"
   measurement = "Measurement:"
   unit = "Unit:"
   measured = "Measured:"
