enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -85,7 +85,8 @@ label {
   timeFinish = "Finish Time:"
   measurement = "Measurement:"
   unit = "Unit:"
-  measured = "Measured:"
+  dateMeasured = "Date Measured:"
+  timeMeasured = "Time Measured:"
   today = "Today:"
   week = "Week:"
   weight = "Weight:"
