--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -50,7 +50,7 @@ header {
   kind = "Kind"
   detail = "Detail"
   calories = "Calories"
-  ate = "ate"
+  ate = "Ate"
   organic = "Organic"
   count = "Count"
   drank = "Drank"
