--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -101,7 +101,7 @@ tab {
   measurables = "Measurables"
   caloriesinout = "Calories In/Out"
   today = "Today"
-  week = "week"
+  week = "Week"
   weight = "Weight"
   pulse = "Pulse"
   glucose = "Glucose"
