enhanced client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -27,6 +27,9 @@ chart {
   max = "Max:"
   avg = "Avg:"
   monthDay = "Month.Day"
+  weight ="lbs / kl"
+  pulse = "bpm"
+  glucose = "level"
 }
 column {
   yes = "yes"
