enhanced server.conf

--- a/server/src/main/resources/server.conf
+++ b/server/src/main/resources/server.conf
@@ -14,4 +14,5 @@ email {
   host=${?HEALTH_BALANCE_EMAIL_HOST}
   sender=${?HEALTH_BALANCE_EMAIL_ADDRESS}
   password=${?HEALTH_BALANCE_EMAIL_PASSWORD}
+  subject="Health Balacne: Account Registration"
 }
