--- a/server/src/test/resources/test.conf
+++ b/server/src/test/resources/test.conf
@@ -11,5 +11,5 @@ email {
   host=${?HEALTH_BALANCE_EMAIL_HOST}
   sender=${?HEALTH_BALANCE_EMAIL_ADDRESS}
   password=${?HEALTH_BALANCE_EMAIL_PASSWORD}
-  subject="Pool Balance: Account Registration"
+  subject="Health Balance: Account Registration"
 }
