--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -41,7 +41,7 @@ dialog {
   measurable = "Measurable"
 }
 error {
-  server = "Fetcher failed to connect to server."
+  server = "The client failed to connect to server."
   register = "Register failed."
   login = "Login failed."
 }
