--- a/server/src/main/resources/server.conf
+++ b/server/src/main/resources/server.conf
@@ -1,5 +1,8 @@
-host=${?HEALTH_BALANCE_HOST}
-port=${?HEALTH_BALANCE_PORT}
+server {
+  host=${?HEALTH_BALANCE_HOST}
+  port=${?HEALTH_BALANCE_PORT}
+  endpoint=${?HEALTH_BALANCE_ENDPOINT}
+}
 
 db {
   url=${?HEALTH_BALANCE_POSTGRESQL_URL}
