--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -1,4 +1,5 @@
-url="http://127.0.0.1:7171/command"
+url="http://127.0.0.1:7171"
+endpoint = "/command"
 window {
   title = "Health Balance"
   width = 1150
