--- a/server/src/main/resources/server.conf
+++ b/server/src/main/resources/server.conf
@@ -5,12 +5,10 @@ server {
 }
 
 db {
+  driverClassName=${HEALTH_BALANCE_POSTGRESQL_DRIVER}
   url=${?HEALTH_BALANCE_POSTGRESQL_URL}
   user=${?HEALTH_BALANCE_POSTGRESQL_USER}
   password=${?HEALTH_BALANCE_POSTGRESQL_PASSWORD}
-  initialSize=${?HEALTH_BALANCE_POSTGRESQL_POOL_INITIAL_SIZE}
-  maxSize=${?HEALTH_BALANCE_POSTGRESQL_POOL_MAX_SIZE}
-  connectionTimeoutMillis=${?HEALTH_BALANCE_POSTGRESQL_POOL_CONNECTION_TIMEOUT_MILLIS}
 }
 
 email {
