--- a/server/src/main/resources/server.conf
+++ b/server/src/main/resources/server.conf
@@ -4,6 +4,12 @@ server {
   endpoint=${?HEALTH_BALANCE_ENDPOINT}
 }
 
+cache {
+  initialSize=${WALKER_CACHE_INITIAL_SIZE}
+  maxSize=${WALKER_CACHE_MAX_SIZE}
+  expireAfter=${WALKER_CACHE_EXPIRE_AFTER}
+}
+
 db {
   driverClassName=${HEALTH_BALANCE_POSTGRESQL_DRIVER}
   url=${?HEALTH_BALANCE_POSTGRESQL_URL}
