--- a/server/src/main/resources/server.conf
+++ b/server/src/main/resources/server.conf
@@ -11,7 +11,7 @@ cache {
 }
 
 db {
-  driverClassName=${HEALTH_BALANCE_POSTGRESQL_DRIVER}
+  driver=${HEALTH_BALANCE_POSTGRESQL_DRIVER}
   url=${?HEALTH_BALANCE_POSTGRESQL_URL}
   user=${?HEALTH_BALANCE_POSTGRESQL_USER}
   password=${?HEALTH_BALANCE_POSTGRESQL_PASSWORD}
