--- a/server/src/test/resources/test.conf
+++ b/server/src/test/resources/test.conf
@@ -1,3 +1,9 @@
+cache {
+  initialSize=${WALKER_CACHE_INITIAL_SIZE}
+  maxSize=${WALKER_CACHE_MAX_SIZE}
+  expireAfter=${WALKER_CACHE_EXPIRE_AFTER}
+}
+
 db {
   driverClassName=${HEALTH_BALANCE_POSTGRESQL_DRIVER}
   url=${?HEALTH_BALANCE_POSTGRESQL_URL}
