--- a/server/src/test/resources/test.conf
+++ b/server/src/test/resources/test.conf
@@ -1,7 +1,7 @@
 cache {
-  initialSize=${WALKER_CACHE_INITIAL_SIZE}
-  maxSize=${WALKER_CACHE_MAX_SIZE}
-  expireAfter=${WALKER_CACHE_EXPIRE_AFTER}
+  initialSize=${HEALTH_BALANCE_CACHE_INITIAL_SIZE}
+  maxSize=${HEALTH_BALANCE_CACHE_MAX_SIZE}
+  expireAfter=${HEALTH_BALANCE_CACHE_EXPIRE_AFTER}
 }
 
 db {
