--- a/server/src/test/resources/test.conf
+++ b/server/src/test/resources/test.conf
@@ -1,11 +1,11 @@
 cache {
-  initialSize=${HEALTH_BALANCE_CACHE_INITIAL_SIZE}
-  maxSize=${HEALTH_BALANCE_CACHE_MAX_SIZE}
-  expireAfter=${HEALTH_BALANCE_CACHE_EXPIRE_AFTER}
+  initialSize=${?HEALTH_BALANCE_CACHE_INITIAL_SIZE}
+  maxSize=${?HEALTH_BALANCE_CACHE_MAX_SIZE}
+  expireAfter=${?HEALTH_BALANCE_CACHE_EXPIRE_AFTER}
 }
 
 db {
-  driver=${HEALTH_BALANCE_POSTGRESQL_DRIVER}
+  driver=${?HEALTH_BALANCE_POSTGRESQL_DRIVER}
   url=${?HEALTH_BALANCE_POSTGRESQL_URL}
   user=${?HEALTH_BALANCE_POSTGRESQL_USER}
   password=${?HEALTH_BALANCE_POSTGRESQL_PASSWORD}
