added about to client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -5,6 +5,12 @@ window {
   width = 1150
   height = 750
 }
+about {
+  alert {
+    headerText = "Health Balance"
+    contentText = "Version: 3.0.0\nLicense: Apache 2.0\nAuthor: Objektwerks\nWebsite: github.com/objektwerks/healthbalance\nIssues: github.com/objektwerks/healthbalance/issues"
+  }
+}
 button {
   add = "Add"
   edit = "Edit"
