added menu to client.conf

--- a/client/src/main/resources/client.conf
+++ b/client/src/main/resources/client.conf
@@ -11,6 +11,11 @@ about {
     contentText = "Version: 3.0.0\nLicense: Apache 2.0\nAuthor: Objektwerks\nWebsite: github.com/objektwerks/healthbalance\nIssues: github.com/objektwerks/healthbalance/issues"
   }
 }
+menu {
+  menu = "Menu"
+  about = "About"
+  exit = "Exit"
+}
 button {
   add = "Add"
   edit = "Edit"
